--- a/src/pages/strenghtsports.astro
+++ b/src/pages/strenghtsports.astro
@@ -38,7 +38,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         <p>With expert coaching, quality equipment, and a supportive environment, Spartacus is the perfect place to pursue your strength goals.</p>
                     </div>
                     <div class="about-image">
-                        <img src="\images\Regionals_Team.png" alt="Strength sports at Spartacus">
+                        <img src="/images/Regionals_Team.png" alt="Strength sports at Spartacus">
                     </div>
                 </div>
             </section>
@@ -64,7 +64,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSXlvtX-MaUvgCUhzlEINZGP-QWAqJkiscxRrLn7XSVLUbvA/viewform?usp=sf_link" target="_blank" class="btn btn-secondary">Apply for coaching</a>
                     </div>
                     <div class="about-image">
-                        <img src="\images\Powerlifting_Sara.png" alt="Powerlifting at Spartacus">
+                        <img src="/images/Powerlifting_Sara.png" alt="Powerlifting at Spartacus">
                     </div>
                 </div>
             </section>   
@@ -74,8 +74,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 <h2 class="section-title">BODYBUILDING</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="\images\Mike_1.png" alt="Bodybuilding at Spartacus">
-                        <img src="\images\Mike_2.png" alt="Bodybuilding at Spartacus">
+                        <img src="/images/Mike_1.png" alt="Bodybuilding at Spartacus">
+                        <img src="/images/Mike_2.png" alt="Bodybuilding at Spartacus">
                     </div>
                     <div class="about-text">
                         <p>Bodybuilding focuses on developing muscle size, definition, and overall aesthetic physique through resistance training and nutrition.</p>
@@ -108,7 +108,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         <p>While our primary focus remains on powerlifting, we welcome and support members interested in developing their Olympic lifting skills.</p>
                     </div>
                     <div class="about-image">
-                        <img src="\images\Jelle_weightlifting.png" alt="Olympic weightlifting">
+                        <img src="/images/Jelle_weightlifting.png" alt="Olympic weightlifting">
                     </div>
                 </div>
             </section>
@@ -118,7 +118,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 <h2 class="section-title">KNKF MEMBERSHIP</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="\images\KNKF_logo.png" alt="KNKF logo">
+                        <img src="/images/KNKF_logo.png" alt="KNKF logo">
                     </div>
                     <div class="about-text">
                         <p>T.S.K.V. Spartacus is an official member of the KNKF (Royal Dutch Powerlifting Federation), the governing body for powerlifting in the Netherlands.</p>
