--- a/src/pages/strenghtsports.astro
+++ b/src/pages/strenghtsports.astro
@@ -1,3 +1,18 @@
+---
+import BaseHead from '../components/BaseHead.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/pages/strenghsports.css';
+---
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <BaseHead />
+</head>
+<body>
+    <Header />
+
 <!-- Hero Section -->
 <section class="hero">
     <div class="container">
@@ -163,3 +178,8 @@
         </section>
     </div>
 </main>
+
+<footer />
+
+</body>
+</html>
