--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -16,7 +16,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 <Header />
 
 <main>
-nothing yet
+
+<link rel="stylesheet" href="https://leden.conscribo.nl/common_resources/css/WebForm.css">
+<div id="cwfForm">Formulier wordt geladen ...</div>
+<script type="text/javascript" src="https://leden.conscribo.nl/TSKVSpartacus/jsForm/load/registrationform/cwfForm" ></script>
+
 </main>
 
 <!-- Footer -->
