previous-board update

--- a/src/pages/committee/previous-boards.astro
+++ b/src/pages/committee/previous-boards.astro
@@ -57,108 +57,124 @@ import '../../styles/global.css';
                     <div class="board-year">
                         <h3>2023-2024</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Ezra Janssen</li>
-                            <li><span class="position">Vice Chair:</span> Lisa Koopman</li>
-                            <li><span class="position">Treasurer:</span> Jan de Vries</li>
-                            <li><span class="position">Secretary:</span> Elena Petrova</li>
+                            <li><span class="position">Chair:</span> Luca Simonetti</li>
+                            <li><span class="position">Vice Chair:</span> Merel van Buren</li>
+                            <li><span class="position">Secretary:</span> Sebastiyan Kalabalakov</li>
+                            <li><span class="position">Treasurer:</span> Milosz Molenda</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2022-2023</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Tim van den Berg</li>
-                            <li><span class="position">Vice Chair:</span> Sara Ahmed</li>
-                            <li><span class="position">Treasurer:</span> Lotte van der Meer</li>
-                            <li><span class="position">Secretary:</span> Mark Johnson</li>
+                            <li><span class="position">Chair:</span> Jesse Wilbers</li>
+                            <li><span class="position">Vice Chair:</span> Anne Barnasconi</li>
+                            <li><span class="position">Secretary:</span> Milan van Uitert</li>
+                            <li><span class="position">Treasurer:</span> Joram Caré</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2021-2022</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Bas van Leeuwen</li>
-                            <li><span class="position">Vice Chair:</span> Thomas Bakker</li>
-                            <li><span class="position">Treasurer:</span> Emma de Groot</li>
-                            <li><span class="position">Secretary:</span> Michael Wang</li>
+                            <li><span class="position">Chair:</span> Thom van Golde</li>
+                            <li><span class="position">Vice Chair:</span> Lucy van den Bogaard</li>
+                            <li><span class="position">Secretary:</span> Antoine Baaijens</li>
+                            <li><span class="position">Treasurer:</span> Daan van Wijnen</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2020-2021</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Laura van Dijk</li>
-                            <li><span class="position">Vice Chair:</span> James Smith</li>
-                            <li><span class="position">Treasurer:</span> Kevin Jansen</li>
-                            <li><span class="position">Secretary:</span> Sophie Williams</li>
+                            <li><span class="position">Chair:</span> Kristel Sas</li>
+                            <li><span class="position">Vice Chair:</span> Han Pei Wu</li>
+                            <li><span class="position">Secretary:</span> Tim Wegener</li>
+                            <li><span class="position">Treasurer:</span> Nout Hakkesteegt</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2019-2020</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Noah de Jong</li>
-                            <li><span class="position">Treasurer:</span> Finn Bakker</li>
-                            <li><span class="position">Secretary:</span> Julia Hendriks</li>
+                            <li><span class="position">Chair:</span> Ezra Scheermeijer</li>
+                            <li><span class="position">Vice Chair:</span> Jonas den Hartog</li>
+                            <li><span class="position">Secretary:</span> Mart Siemerink</li>
+                            <li><span class="position">Treasurer:</span> Di Ke Wu</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2018-2019</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Liam van Dijk</li>
-                            <li><span class="position">Treasurer:</span> Sarah Jansen</li>
-                            <li><span class="position">Secretary:</span> Robin Smit</li>
+                            <li><span class="position">Chair:</span> Lévi Rijnen</li>
+                            <li><span class="position">Vice Chair:</span> Joris Jansma</li>
+                            <li><span class="position">Secretary:</span> Ezra Scheermeijer</li>
+                            <li><span class="position">Treasurer:</span> Stephanie Rijken</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2017-2018</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Thomas de Vries</li>
-                            <li><span class="position">Treasurer:</span> Anna Visser</li>
-                            <li><span class="position">Secretary:</span> David Mulder</li>
+                            <li><span class="position">Chair:</span> Peter Kerris</li>
+                            <li><span class="position">Vice Chair:</span> Demi Zanen</li>
+                            <li><span class="position">Secretary:</span> Paud de Rooij</li>
+                            <li><span class="position">Treasurer:</span> Sven Jansen</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2016-2017</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Emma Bakker</li>
-                            <li><span class="position">Treasurer:</span> Lucas Vermeulen</li>
-                            <li><span class="position">Secretary:</span> Sophie van den Berg</li>
+                            <li><span class="position">Chair:</span> Dominique van Deursen</li>
+                            <li><span class="position">Vice Chair:</span> Roel van Etten</li>
+                            <li><span class="position">Secretary:</span> Peter Kerris</li>
+                            <li><span class="position">Treasurer:</span> Rob van den Heuvel</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2015-2016</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Max de Boer</li>
-                            <li><span class="position">Treasurer:</span> Eva van Dijk</li>
-                            <li><span class="position">Secretary:</span> Sam Jansen</li>
+                            <li><span class="position">Chair:</span> Chris Janssen</li>
+                            <li><span class="position">Vice Chair:</span> Dominique van Deursen</li>
+                            <li><span class="position">Secretary:</span> Pim Mertens</li>
+                            <li><span class="position">Treasurer:</span> Mitchel Leunissen</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2014-2015</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Lieke Vermeulen</li>
-                            <li><span class="position">Treasurer:</span> Tim Bakker</li>
-                            <li><span class="position">Secretary:</span> Daan de Jong</li>
+                            <li><span class="position">Chair:</span> Chris Janssen</li>
+                            <li><span class="position">Secretary:</span> Michel van Gelder</li>
+                            <li><span class="position">Treasurer:</span> Mitchel Leunissen</li>
+                            <li><span class="position">Activity Coordinator:</span> Camiel Roex</li>
                         </ul>
                     </div>
                     
                     <div class="board-year">
                         <h3>2013-2014</h3>
                         <ul class="board-list">
-                            <li><span class="position">Chair:</span> Ruben Smit</li>
-                            <li><span class="position">Treasurer:</span> Fleur van Leeuwen</li>
-                            <li><span class="position">Secretary:</span> Jesse Verhoeven</li>
+                            <li><span class="position">Chair:</span> Rik Philippen</li>
+                            <li><span class="position">Secretary:</span> Chris Janssen</li>
+                            <li><span class="position">Treasurer:</span> Michel van Gelder</li>
+                        </ul>
+                    </div>
+                    
+                    <div class="board-year">
+                        <h3>2012-2013</h3>
+                        <ul class="board-list">
+                            <li><span class="position">Chair:</span> Jeroen de Beer</li>
+                            <li><span class="position">Secretary:</span> Rik Philippen</li>
+                            <li><span class="position">Treasurer:</span> Mark van den Ouweland</li>
+                            <li><span class="position">General Board Member:</span> Wietske van der Zee</li>
                         </ul>
                     </div>
                     
                     <div class="board-year board-year-founding">
-                        <h3>2012-2013 (Founding Board)</h3>
+                        <h3>2011-2012 (Founding Board)</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Sjoerd van der Zee</li>
                             <li><span class="position">Secretary:</span> Jeroen de Beer</li>
