--- a/src/pages/committee/previous-boards.astro
+++ b/src/pages/committee/previous-boards.astro
@@ -55,6 +55,9 @@ import '../../styles/global.css';
                 <h2 class="section-title">PREVIOUS BOARDS</h2>
                 <div class="previous-boards">
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2023-2024.jpg" alt="Board 2023-2024" class="board-img">
+                        </div>
                         <h3>2023-2024</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Luca Simonetti</li>
@@ -65,6 +68,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2022-2023.jpg" alt="Board 2022-2023" class="board-img">
+                        </div>
                         <h3>2022-2023</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Jesse Wilbers</li>
@@ -75,6 +81,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2021-2022.jpg" alt="Board 2021-2022" class="board-img">
+                        </div>
                         <h3>2021-2022</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Thom van Golde</li>
@@ -85,6 +94,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2020-2021.jpg" alt="Board 2020-2021" class="board-img">
+                        </div>
                         <h3>2020-2021</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Kristel Sas</li>
@@ -95,6 +107,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2019-2020.jpg" alt="Board 2019-2020" class="board-img">
+                        </div>
                         <h3>2019-2020</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Ezra Scheermeijer</li>
@@ -105,6 +120,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2018-2019.jpg" alt="Board 2018-2019" class="board-img">
+                        </div>
                         <h3>2018-2019</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Lévi Rijnen</li>
@@ -115,6 +133,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2017-2018.jpg" alt="Board 2017-2018" class="board-img">
+                        </div>
                         <h3>2017-2018</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Peter Kerris</li>
@@ -125,6 +146,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2016-2017.jpg" alt="Board 2016-2017" class="board-img">
+                        </div>
                         <h3>2016-2017</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Dominique van Deursen</li>
@@ -135,6 +159,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2015-2016.jpg" alt="Board 2015-2016" class="board-img">
+                        </div>
                         <h3>2015-2016</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Chris Janssen</li>
@@ -145,6 +172,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2014-2015.jpg" alt="Board 2014-2015" class="board-img">
+                        </div>
                         <h3>2014-2015</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Chris Janssen</li>
@@ -155,6 +185,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2013-2014.jpg" alt="Board 2013-2014" class="board-img">
+                        </div>
                         <h3>2013-2014</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Rik Philippen</li>
@@ -164,6 +197,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year">
+                        <div class="board-photo">
+                            <img src="/images/Board_2012-2013.jpg" alt="Board 2012-2013" class="board-img">
+                        </div>
                         <h3>2012-2013</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Jeroen de Beer</li>
@@ -174,6 +210,9 @@ import '../../styles/global.css';
                     </div>
                     
                     <div class="board-year board-year-founding">
+                        <div class="board-photo">
+                            <img src="/images/Board_2011-2012.jpg" alt="Founding Board 2011-2012" class="board-img">
+                        </div>
                         <h3>2011-2012 (Founding Board)</h3>
                         <ul class="board-list">
                             <li><span class="position">Chair:</span> Sjoerd van der Zee</li>
